# ninebot-ble

./: .gitignore  Cargo.toml  Makefile  README.md
doc/: README_zh.md  protocol.md
examples/: about.rs  clone_connect.rs  clone_debug.rs  clone_test.rs  controller.rs  login.rs  miauth_test.rs  monitor.rs  raw_probe.rs  register.rs  scanner.rs  settings.rs  speed.rs
src/: android_api.rs  clone_connection.rs  connection.rs  consts.rs  lib.rs  login.rs  mi_crypto.rs  protocol.rs  register.rs  scanner.rs
src/session/: battery.rs  commands.rs  info.rs  mi_session.rs  mod.rs  payload.rs  settings.rs  travel.rs
tests/: crypto_test.rs  motor_info_test.rs  responses_test.rs  uart_test.rs
