[package]
name = "ninebot-ble"
version = "0.1.2"
edition = "2021"
license-file = "LICENSE.md"
description = "A lightweight Rust library for BLE communication with Ninebot/Xiaomi electric scooters"
keywords = ["ninebot", "xiaomi", "m365", "electric-scooter", "ble"]
repository = "https://github.com/zero2005x/ninebot-ble"
authors = ["zero2005x <zero2005x@gmail.com>"]
readme = "README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
btleplug = { version = "0.11", features = ["serde"] }
serde = { version = "1.0.136", features = ["derive"] }
p256 = { version = "0.10.1", features = ["ecdsa", "ecdh"] }
rand_core = "0.6.3"
elliptic-curve = "0.11.9"
ccm = "0.4.4"
aes = { version = "0.7", features = ["force-soft"] }
hkdf = "0.12.0"
sha2 = "0.10.1"
hex-literal = "0.3.4"
hmac = "0.12.1"

pretty-hex = "0.2.1"
tokio = { version = "1.15.0", features = ["full"] }
futures-util = "0.3.19"
futures = "0.3.19"
tokio-stream = "0.1.8"
uuid = { version = "1.0", features = ["v4"] }
anyhow = "1.0.53"
thiserror = "1.0.30"
tracing = "0.1"
chrono = "0.4"
jni = "0.19"
once_cell = "1.18"
android_logger = "0.13"
log = "0.4"

[dev-dependencies]
tracing-subscriber = { version = "0.3.7", features = ["tracing-log"] }

[[example]]
name = "register"

[[example]]
name = "login"

[[example]]
name = "scanner"

[[example]]
name = "about"

[[example]]
name = "settings"

[[example]]
name = "clone_test"

[[example]]
name = "clone_connect"

[[example]]
name = "clone_debug"

[[example]]
name = "raw_probe"

[[example]]
name = "miauth_test"

[[example]]
name = "monitor"

[[example]]
name = "controller"
